WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119691
Section's collapsed borders painted in wrong place in rtl tables
https://bugs.webkit.org/show_bug.cgi?id=119691
Summary
Section's collapsed borders painted in wrong place in rtl tables
Robert Hogan
Reported
2013-08-12 10:33:15 PDT
..
Attachments
Patch
(5.21 KB, patch)
2013-08-12 11:34 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2013-08-12 11:34:03 PDT
Created
attachment 208551
[details]
Patch
WebKit Commit Bot
Comment 2
2013-08-13 11:05:54 PDT
Comment on
attachment 208551
[details]
Patch Clearing flags on attachment: 208551 Committed
r154013
: <
http://trac.webkit.org/changeset/154013
>
WebKit Commit Bot
Comment 3
2013-08-13 11:05:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug